package edu.fiuba.algo3.Model.Turn;

public interface Turn {
    void executeTurn();

}
