package edu.fiuba.algo3.Turn;

public class ComputerTurn implements Turn{

    //TODO computerInterface


    public void executeTurn() {

    }
}
