package edu.fiuba.algo3.Turn;

public class PlayerTurn implements Turn {

    //TODO playerInterface

    public void executeTurn(){

    }
}
